2005-02-12  Arafat Medini <kinryu@silverpen.de>

	* configure.in  Readded Arabic locale ar to ALL_LINGUAS

2005-02-11  Sarfraaz Ahmed <asarfraaz@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c (add_vevent) : Always
	set the TRANSP property from the busy status. Fixes #70283
	(receive_objects) : Fixed a memory leak. Fixes #72482

2005-02-11  Sushma Rai  <rsushma@novell.com>

	* storage/exchange-config-listener.c (account_changed): Removing the 
	esources for the account before asking for restart, if owa url is 
	modified. Fixes #71995.

2005-02-10  Sushma Rai  <rsushma@novell.com>

	* lib/e2k-autoconfig.c (validate): Changed the support URL value.
	Fixes #71800

2005-02-10  Sushma Rai  <rsushma@novell.com>

	* camel/camel-exchange-provider.c (exchange_auto_detect_cb): Adding
	GC server to the table of auto detected values.
	(exchange_validate_user_cb): Setting ad_server paramemter value in
	CamelUrl.

	* lib/e2k-autoconfig.c (e2k_validate_user)(validate): Reading the GC
	server value.
	Fixes #71878

2005-02-10  Sushma Rai  <rsushma@novell.com>

	* camel/camel-exchange-provider.c: Setting HIDDEN_AUTH in 
	exchange_provider structure, so that it auth section doesn't
	appear while creating an account.

2005-02-09  Sushma Rai  <rsushma@novell.com>
	
	* storage/exchange-account.c (change_passwd_cb): Setting the new
	password entered when change password is invoked by password expiry
	check. Fixes #72091

2005-02-09  Sushma Rai  <rsushma@novell.com>

	* storage/exchange-account.c (exchange_account_new): Not setting
	default warning period, if user has not selected password expiry
	warning option. 
	(find_passwd_exp_period): Finding the password expiry period and showing
	warning, only if user has selected that option. 
	Fixes #72093

2005-02-08  David Malcolm  <dmalcolm@redhat.com>

	* addressbook/Makefile.am, calendar/Makefile.am,
	camel/Makefile.am,  mail/Makefile.am, shell/Makefile.am,
	storage/Makefile.am, lib/Makefile.am:
