@@ -25,6 +25,8 @@
 
 #include <string.h>
 
+#include <camel/camel-offline-store.h>
+
 #include "camel-exchange-search.h"
 #include "camel-exchange-folder.h"
 
@@ -32,13 +34,19 @@ static ESExpResult *
 exchange_body_contains (struct _ESExp *f, int argc, struct _ESExpResult **argv,
 			CamelFolderSearch *s);
 
+
+static CamelFolderSearchClass *parent_class = NULL;
+
+
 static void
 camel_exchange_search_class_init (CamelExchangeSearchClass *camel_exchange_search_class)
 {
 	/* virtual method overload */
 	CamelFolderSearchClass *camel_folder_search_class =
 		CAMEL_FOLDER_SEARCH_CLASS (camel_exchange_search_class);
-
+	
+	parent_class = (CamelFolderSearchClass *) camel_folder_search_get_type ();
+	
 	/* virtual method overload */
 	camel_folder_search_class->body_contains = exchange_body_contains;
 }
@@ -72,7 +80,10 @@ exchange_body_contains (struct _ESExp *f, int argc, struct _ESExpResult **argv,
 	GHashTable *uid_hash = NULL;
 	GPtrArray *found_uids;
 	int i;
-
+	
+	if (((CamelOfflineStore *) s->folder->parent_store)->state == CAMEL_OFFLINE_STORE_NETWORK_UNAVAIL)
+		return parent_class->body_contains (f, argc, argv, s);
+	
 	if (s->current) {
 		r = e_sexp_result_new (f, ESEXP_RES_BOOL);
 		r->value.bool = FALSE;
